# DGSP

./: .gitignore  Makefile  README.md  main.ipynb  pyproject.toml  r.ipynb
dgsp/: __init__.py  functions.py  model.py
dgsp/estimators/: __init__.py  base.py  particle.py  trivial.py  unscented.py
dgsp/estimators/kalman/: __init__.py  base.py  cubature.py  extended.py  unscented.py
dgsp/estimators/monte_carlo/: __init__.py  base.py  minmax.py  particle.py
filterpy_fixed/: ckf.py  ukf.py
pg/: calc.ipynb  filter.ipynb  mc.ipynb  pf.ipynb  traj.ipynb  triv.ipynb
report/: main.tex
scripts/: __init__.py  estimate.py  generate.py  stats.py
stats/: example_k_0.csv  example_k_1.csv  example_k_2.csv  example_k_3.csv  example_x_0.csv  example_x_1.csv  example_x_2.csv  example_x_3.csv
